# ClaudeCode_Codereview

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.base  Dockerfile.offline  README.md  docker-compose.airgap.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build-offline-bundle.yml
knowledge/standards/: example.md
requirements/: offline-runtime.txt
scripts/: __init__.py  install_offline.ps1  install_offline.sh  load_offline_images.ps1  load_offline_images.sh  offline_artifacts.py  prepare_offline_bundle.ps1  restore_offline_artifacts.py  verify_claude_runtime.py  verify_offline_wheelhouse.py  wheelhouse_manifest.py
src/ai_code_review/: __init__.py  __main__.py  bootstrap.py  cli.py  config.py
src/ai_code_review/api/: app.py  asgi.py
src/ai_code_review/application/: aggregator.py  comment_counter.py  diff_parser.py  languages.py  prompt_builder.py  review_service.py  worker.py
src/ai_code_review/domain/: errors.py  interfaces.py  models.py
src/ai_code_review/infrastructure/: claude_agent.py  git_repository.py  knowledge.py  mongo_repository.py  repository_guard.py
tests/: test_comment_counter.py  test_diff_parser.py  test_knowledge.py  test_models_and_aggregation.py  test_offline_artifacts.py  test_repository_guard.py
