[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ai-code-review"
version = "0.1.0"
description = "Repository-aware AI code review service powered by Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "claude-agent-sdk==0.2.107",
  "fastapi>=0.115.0,<1.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "pydantic-settings>=2.8.0,<3.0.0",
  "pymongo>=4.10.0,<5.0.0",
  "python-docx>=1.1.2,<2.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<2.0.0",
  "ruff>=0.8.0,<1.0.0",
]

[project.scripts]
ai-code-review = "ai_code_review.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_code_review"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
